--- a/.env
+++ b/.env
@@ -2,3 +2,9 @@ MONGO_URI=mongodb://artyomdev250:artyomdev250@ac-q8ccja9-shard-00-00.ykgzdkd.mon
 PORT=5000
 
 JWT_SECRET=mysecretkey123
+
+ACCESS_TOKEN_SECRET=your_access_secret_here
+REFRESH_TOKEN_SECRET=your_refresh_secret_here
+
+ACCESS_TOKEN_EXPIRES=1m
+REFRESH_TOKEN_EXPIRES=7d
