--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@ JWT_SECRET=mysecretkey123
 ACCESS_TOKEN_SECRET=your_access_secret_here
 REFRESH_TOKEN_SECRET=your_refresh_secret_here
 
-ACCESS_TOKEN_EXPIRES=1m
+ACCESS_TOKEN_EXPIRES=60s
 REFRESH_TOKEN_EXPIRES=7d
